Bug admin 2. Listas visibles

--- a/stylesheets/admin.css
+++ b/stylesheets/admin.css
@@ -263,7 +263,6 @@ button[type="button"] {
 	position: relative;
 
 	float: left;
-	overflow: hidden;
 }
 
 .photo_selection img {
